# interview-ai

./: .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yaml  env  pyproject.toml
.github/workflows/: config.yaml
app/: app.py  main.py
app/api/routers/: auth.py  chat.py  transcribe.py
app/core/: authenticate.py  process.py  rag.py
app/models/: auth.py  chat.py  user.py
app/queries/: queries.py
app/routers/: auth.py  chat.py  test.py  user.py
app/test/: audio.py  chat.py
app/tests/: test_ws.py
app/utils/: conn_manager.py  connections.py  helper.py  postgres_conn.py
deploy/: task.json
dev_resources/: init.sql
migrations/: V10_20240421__add_columns_to_questions_table.sql  V11_20240421__create_solution_table.sql  V1_20240114__create_user_table.sql  V1_20240118__create_users_table.sql  V1_20240119__create_users_table.sql  V2_20240116__create_token_table.sql  V2_20240209__add_provider_column_to_users_table.sql  V3_20240117__add_fk_constraint.sql  V3_20240214__add_name_username.sql  V4_20240223__add_status_column.sql  V5_20240325__create_vectors_db.sql  V5_20240401__create_questions_table.sql  V6_20240404__create_context_table.sql  V7_20240418__add_preferences_table.sql  V8_20240418__alter_user_type.sql  V9_20240418__add_fk_relationships.sql
prompt/: prompt.json  prompt.py
streamlit/: app.py  main.py
tests/: conftest.py  test_auth.py  test_user.py  test_ws.py
